@@ -32,8 +32,8 @@
       <h2>Description</h2>
       <p>This toolbox is a an extension to <a href="matlab:web('http://www.fil.ion.ucl.ac.uk/spm/software/spm12/','-browser');">SPM12</a> (Wellcome Department of Cognitive Neurology) to provide computational anatomy. This covers diverse morphometric methods such as voxel-based morphometry (VBM), surface-based morphometry (SBM), deformation-based morphometry (DBM), and ROI- or label-based morphometry. It is developed by Christian Gaser and Robert Dahnke (Jena University Hospital, Departments of Psychiatry and Neurology) and free but copyright software, distributed under the terms of the <a href="matlab:web('http://www.gnu.org/licenses/gpl-2.0.html','-browser')">GNU General Public Licence</a> as published by the Free Software Foundation; either version 2 of the Licence, or (at your option) any later version.</p>
       <p>
-        This documentation contains <a class="function">interaktive MATLAB links</a>&nbsp; that open SPM and CAT tools, e.g. to display ROIs like the <a class="function" href="matlab:cat_vol_display_label(struct('data',{{fullfile(spm('dir'),'toolbox','cat12','templates_1.50mm','Template_T1_IXI555_MNI152.nii'); fullfile(spm('dir'),'toolbox','cat12','templates_1.50mm','lpba40.nii')}}))">LPBA40 volume map</a> or the 
-          <a class="function" href="matlab:cat_surf_display(struct('data',{{fullfile(spm('dir'),'toolbox','cat12','atlases_surfaces','lh.LPBA40.Template_T1_IXI555_MNI152')}},'multisurf',0))">left LPBA40 surface</a>.
+        This documentation contains <a class="function">interaktive MATLAB links</a>&nbsp; that open SPM and CAT tools, e.g. to display ROIs like the <a class="function" href="matlab:cat_vol_display_label(struct('data',{{fullfile(spm('dir'),'toolbox','cat12','templates_1.50mm','Template_T1_IXI555_MNI152.nii'); fullfile(spm('dir'),'toolbox','cat12','templates_1.50mm','lpba40.nii')}}))">LPBA40 volume map</a><!-- or the 
+          <a class="function" href="matlab:cat_surf_display(struct('data',{{fullfile(spm('dir'),'toolbox','cat12','atlases_surfaces','lh.LPBA40.Template_T1_IXI555_MNI152')}},'multisurf',0))">left LPBA40 surface</a>-->.
         You can find this help (e.g. if the SPM graphic window was used by SPM/CAT) in the CAT toolbox menu at the left bottom button <em>Tools > Internet/Help....</em>
       </p><p>
         For further instruction check also the <a class="function" href="matlab:try,open(fullfile(spm('dir'),'toolbox','cat12','CAT12-Manual.pdf'));end; ">CAT12-Manual</a>.  
